# Tima299

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/include/: appointment_controller.h  appointment_repository.h  doctor_controller.h  doctor_management.h  doctor_repository.h  doctor_service.h  patient_service.h  specialization_repository.h  specialization_service.h  user_controller.h
backend/models/: appointment_model.h  doctor_model.h  patient_model.h  specialization_model.h
backend/src/: main.c
backend/src/controllers/: appointment_controller.c  doctor_controller.c  doctor_management.c  user_controller.c
backend/src/repositories/: appointment_repository.c  doctor_repository.c  patient_repository.c  specialization_repository.c
backend/src/services/: appointment_service.c  appointment_service.h  doctor_service.c  patient_service.c  specialization_service.c
backend/src/utils/: helper1.c  helper2.c
backend/tests/: CMakeLists.txt  test_appointment.c  test_doctor.c
config/: config.json
database/: connection.c  schema.sql
